Fix blurred pixels issue

--- a/src/jammed.css
+++ b/src/jammed.css
@@ -1,4 +1,5 @@
 #canvas {
-    width: 100%;
+    /*width: 100%;*/
     border: 1px solid black;
+    background-color: black;
 }
